# simpleocv

./: CMakeLists.txt  LICENSE  README.md  xmake.lua
include/: simpleocv.h
sample/: basic.cpp
src/: mat_pixel.h  mat_pixel_affine.cpp  mat_pixel_rotate.cpp  simpleocv.cpp
